Admin Dashboard part 1

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Phoenix Airline/nbproject/private/
 /Phoenix Airline/build/
+/AdminDashboard/nbproject/private/
+/AdminDashboard/build/
+/AdminDashboard1/nbproject/private/
+/AdminDashboard1/build/
