--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /AdminDashboard/build/
 /AdminDashboard1/nbproject/private/
 /AdminDashboard1/build/
+/StaffG1Proj/nbproject/private/
+/StaffG1Proj/build/
